@@ -11,7 +11,7 @@
         jQuery(document).ready(index_page_ready);
     </script>
 </head>
-<body>
+<body id='indexfile'>
 
 <div id='header'>
     <div class='content'>
